--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ android {
 dependencies {
     implementation project(path: ':feature-product-management')
 
+    implementation project(path: ':core-theme')
+
     implementation "androidx.appcompat:appcompat:1.5.1"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -59,10 +61,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation "androidx.compose.material3:material3:1.0.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
 
     // ViewModel Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
