--- a/feature-product-management/build.gradle
+++ b/feature-product-management/build.gradle
@@ -45,6 +45,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':core-theme')
+    
     // ViewModel Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
@@ -72,11 +74,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation "androidx.compose.material3:material3:1.0.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
-
 
     // GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
