--- a/core-theme/build.gradle
+++ b/core-theme/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     api "androidx.compose.material3:material3:1.0.0"
     api "androidx.compose.material3:material3-window-size-class:1.0.0"
     api "androidx.compose.ui:ui-tooling-preview:1.3.0"
+    debugApi "androidx.compose.ui:ui-tooling:1.3.0"
 }
