--- a/feature-product-management/build.gradle
+++ b/feature-product-management/build.gradle
@@ -46,7 +46,7 @@ android {
 
 dependencies {
     implementation project(path: ':core-theme')
-    
+
     // ViewModel Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
@@ -66,6 +66,15 @@ dependencies {
     // Jetpack Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    // Logging Interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10"
+
+    // Timber
+    debugImplementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // LeakCanary: debugImplementation because should only run in debug builds.
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
     //TODO remove
     implementation 'androidx.core:core-ktx:1.9.0'
