--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':app'
 include ':feature-product-management'
 enableFeaturePreview("VERSION_CATALOGS")
 include ':core-theme'
+include ':testing'
