--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    namespace 'com.eahm.feature.product.management'
+    namespace 'com.eahm.testing'
     compileSdk 33
 
     defaultConfig {
@@ -59,31 +59,26 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"
-
-    // Jetpack Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-
-    // Logging Interceptor
-    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10"
-
     // Timber
     debugImplementation 'com.jakewharton.timber:timber:5.0.1'
 
     // LeakCanary: debugImplementation because should only run in debug builds.
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
-    //TODO remove
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // GSON
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+    implementation "com.google.firebase:firebase-firestore-ktx"
+
+    // Google Truth
+    testImplementation "com.google.truth:truth:1.1.3"
+
+    //For runBlockingTest, CoroutineDispatcher etc.
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    //For InstantTaskExecutorRule
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
