adding network response adapter

--- a/feature-product-management/build.gradle
+++ b/feature-product-management/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"
 
+    // Network Response Adapter
+    implementation "com.github.haroldadmin:NetworkResponseAdapter:5.0.0"
+
     // Jetpack Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
