--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -45,6 +45,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':core-domain')
     implementation project(path: ':core-theme')
 
     // ViewModel Compose
